--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: annar
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
+Date: 2016-02-01
 Authors@R: c(person("Anna","Hovis",email="hovisa@appstate.edu",role=c("aut","cre")),
             person("James","Johnson",email="johnsonjc6@appstate.edu",role="aut"),
             person("Erin","Kreiling",email="kreilingeg@appstate.edu",role="aut"))
