--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: annar
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Random Card
 Version: 0.1.0
 Date: 2016-02-01
 Authors@R: c(person("Anna","Hovis",email="hovisa@appstate.edu",role=c("aut","cre")),
