--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2016-02-01
 Authors@R: c(person("Anna","Hovis",email="hovisa@appstate.edu",role=c("aut","cre")),
             person("James","Johnson",email="johnsonjc6@appstate.edu",role="aut"),
             person("Erin","Kreiling",email="kreilingeg@appstate.edu",role="aut"))
-Description: Chooses random cards from a deck without replacement. It can show either the face, suit, and or value of the card.
+Description:Does simple functions such as squaring numbers.
 License: What license is it under?
 LazyData: TRUE
 Suggests: knitr,
